# Forge

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Config/: main.json  meshes.json  shaders.json  voxel.json
Config/Materials/: snow.json
Forge/Debug/: dna.txt
Forge/Headers/: camera.hpp  console.hpp  gbuffer.hpp  glitter.hpp  gui.hpp  input.hpp  light.hpp  materials.hpp  mesh.hpp  nuklear_glfw.hpp  octree.hpp  perlin.hpp  renderable.hpp  shader.hpp  shadermanager.hpp  shadinclude.hpp  skybox.hpp  sol.hpp  ubomanager.hpp  utils.hpp  voxel.hpp  voxelfunctors.hpp  voxelscape.hpp  xk.hpp
Forge/Shaders/deferred/: mesh.frag  mesh.vert  skybox.frag  skyboxHDR.frag  voxel.frag  voxel.vert
Forge/Shaders/ext/: beckmann.glsl  burley.glsl  cooktorrance.glsl  ggx.glsl  lambert.glsl  microfacet.glsl  model.glsl  orennayar.glsl
Forge/Shaders/lighting/: ambientlight.frag  directionallight.frag  pbr.frag  pointlight.frag  spotlight.frag
Forge/Shaders/special/: shadow.frag  shadow.vert
Forge/Sources/: camera.cpp  console.cpp  gbuffer.cpp  glitter.cpp  gui.cpp  input.cpp  light.cpp  main.cpp  materials.cpp  mesh.cpp  perlin.cpp  shader.cpp  skybox.cpp  voxel.cpp  voxelscape.cpp
Models/: cube.blend
Shaders/: lighting.frag  lighting.vert  main.frag  main.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  shadow.frag  skybox.frag  skybox.vert  std.deferred.frag  std.deferred.vert  voxel.frag  voxel.vert  voxel2.frag  voxel2.vert
Shaders/deferred/: mesh.frag  mesh.vert  voxel.frag
Shaders/ext/: cooktorrance.glsl  ggx.glsl
Shaders/lighting/: ambientlight.frag  base.vert  directionallight.frag  emissivelight.frag  pointlight.frag  spotlight.frag
Skybox/retnika/: radmap.hdr
Textures/snow/: snow.json
